# roleplay-chat

./: .env.example  .gitignore  pyproject.toml  requirements.txt
app/: main.py
app/api/routes/: characters.py  chat.py  health.py  upload.py  users.py
app/auth/: dependencies.py
app/characters/: loader.py
app/characters/definitions/: kitagawa_marin.yaml  nanakusa_nazuna.yaml  vermeil.yaml
app/chat/: routes.py  service.py
app/core/: config.py  id_generator.py  url.py
app/db/: models.py  session.py  user.py
app/llm/: factory.py  local.py  models.py  openrouter.py  prompts.py  provider.py
app/memory/: conversation.py  store.py  summarizer.py
app/schemas/: character.py  chat.py  user.py
app/services/: character_service.py  chat_service.py  memory_service.py  user_service.py
roleplay_chat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
