[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "roleplay-chat"
version = "0.1.0"
description = "Character-based roleplay chat backend"
readme = "README.md"
requires-python = ">=3.11,<3.15"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "PyYAML",
    "openai>=1.40.0",
    "sqlalchemy>=2.0.0",
    "python-multipart",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1,<0.29.0",
  "pytest>=9.1.1,<10.0",
  "pytest-asyncio>=1.4.0,<2.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"